# techno-ih2

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: c.yml
cmd/: CMakeLists.txt  main.c
coverage/parallel_matrix/: index-sort-f.html  index-sort-l.html  index.html  parallel_matrix.info
coverage/parallel_matrix/parallel_matrix/: index-sort-f.html  index-sort-l.html  index.html  matrix.c.func-sort-c.html  matrix.c.func.html  matrix.c.gcov.html
coverage/static_matrix/: index-sort-f.html  index-sort-l.html  index.html  static_matrix.info
coverage/static_matrix/static_matrix/: index-sort-f.html  index-sort-l.html  index.html  matrix.c.func-sort-c.html  matrix.c.func.html  matrix.c.gcov.html
gcov/parallel_matrix/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make  link.txt  matrix.c.gcda  matrix.c.gcno  matrix.c.gcov
gcov/static_matrix/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make  matrix.c.gcda  matrix.c.gcno  matrix.c.gcov
src/: CMakeLists.txt
src/dynamic_matrix/: CMakeLists.txt  matrix.c  matrix.h
src/menu/: CMakeLists.txt  menu.c  menu.h
src/parallel_matrix/: CMakeLists.txt  matrix.c  matrix.h
src/static_matrix/: CMakeLists.txt  matrix.c  matrix.h
tests/: CMakeLists.txt
tests/time_check/: CMakeLists.txt
tests/time_check/parallel_time/: CMakeLists.txt  parallel_matrix.c
tests/time_check/static_time/: CMakeLists.txt  static_matrix.c
tests/unit/: CMakeLists.txt
tests/unit/check_time/: CMakeLists.txt
tests/unit/check_time/dynamic/: CMakeLists.txt  matrix.cpp
tests/unit/check_time/static/: CMakeLists.txt  main.cpp  matrix.cpp
tests/unit/matrix/: CMakeLists.txt
tests/unit/matrix/dynamic_matrix/: CMakeLists.txt  matrix.cpp
tests/unit/matrix/dynamic_matrix/file_with_matrix/: test_matrix.txt
tests/unit/matrix/parallel_matrix/: CMakeLists.txt  main.cpp  matrix.cpp
tests/unit/matrix/static_matrix/: matrix.cpp
tests/unit/parallel_matrix/: main.cpp  matrix.cpp
tests/unit/static_matrix/: CMakeLists.txt  matrix.cpp
tests/unit/static_matrix/file_with_matrix/: test_expect_matrix.txt  test_matrix.txt
